# MLP

./: .gitignore  README.md
OOP/: CMakeLists.txt
OOP/Q1/: Aluno.cpp  Aluno.h  Pessoa.cpp  Pessoa.h  main.cpp  readme.txt
OOP/Q2/: main.cpp  readme.txt
OOP/Q3/: Funcionario.cpp  Funcionario.h  main.cpp
OOP/Q4/: main.cpp
dynamic typing/: E1.ipynb  E2.ipynb
dynamic typing/.ipynb_checkpoints/: E1-checkpoint.ipynb  E2-checkpoint.ipynb
dynamic typing/challenge/: challenge.ipynb
haskell/src/: challenge1.hs  challenge2.hs  challenge3.hs  n_fib_numbers.hs  n_potencias_de_2.hs  norma.hs  ocorrencias.hs  pertenceLst.hs  prod_int.hs  replica.hs  sim.hs  somatorio.hs
julia/: Exemplos.ipynb
prolog/src/: challenge.pl  q1.pl  q10.pl  q2.pl  q3.pl  q4.pl  q5.pl  q6.pl  q7.pl  q8.pl  q9.pl
